objects/LeaseObligation__c.object
<CustomObject>
    <description>&lt;LOB&gt; - Presents a list of Bank Guarantee and Insurance Details for an Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lease Obligations</relationshipLabel>
        <relationshipName>LeaseObligations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GuaranteeAmount__c</fullName>
        <label>Guarantee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GuaranteeBankDetails__c</fullName>
        <label>Guarantee Bank Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GuaranteeDetails__c</fullName>
        <label>Guarantee Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GuaranteeExpiryDate__c</fullName>
        <label>Guarantee Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GuaranteeTypes__c</fullName>
        <label>Guarantee Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GuaranteesType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceAmount__c</fullName>
        <label>Insurance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InsuranceCompanyName__c</fullName>
        <label>Insurance Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceCoverage__c</fullName>
        <label>Insurance Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceExpiryDate__c</fullName>
        <label>Insurance Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InsurancePolicyNumber__c</fullName>
        <label>Insurance Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceType__c</fullName>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREFId__c</fullName>
        <label>Tech_DMXREF_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Lease Obligation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lease Obligation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Obligations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>